# RDataParser.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg  setup.py
RDataParser/: __init__.py
