[metadata]
name = RDataParser
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/RDataParser.py
description = a pure python parser of RData without using R.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = R, statistics, RData, parser
license = GPL-3.0+
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: OSI Approved
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science :: Data Science
	Topic :: Science :: Statistics

[options]
include_package_data = True
zip_safe = True
packages = RDataParser
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.py.git#egg=kaitaiStructCompile;
test_suite = tests.tests.Tests
install_requires =
	numpy
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.py.git#egg=kaitaiStructCompile"]
